add Everything text

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -248,7 +248,7 @@
       </div>
       <div class="row">
         <div class="col-md-3 product-feature">
-        <p>${_(' ')}</p>
+        <p>${_('Choose from thousands of packages to customize your installation; requires a fast network connection.')}</p>
         </div>
         <div class="col-md-9">
           <div class="white">
@@ -294,7 +294,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_(' ')}</p>
+        <p>${_('Choose from thousands of packages to customize your installation; requires a fast network connection.')}</p>
         </div>
       </div>
       <div class="row">
@@ -330,7 +330,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_(' ')}</p>
+        <p>${_('Choose from thousands of packages to customize your installation; requires a fast network connection.')}</p>
         </div>
       </div>
       <div class="row">
