add an experts bubble to Everything

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -242,8 +242,11 @@
   <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
     <div class="container using">
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-2">
         <h2>${_('Everything')}</h2>
+        </div>
+        <div class="col-xs-10">
+        <div class="experts sx">${_('Experts only!')}</div>
         </div>
       </div>
       <div class="row">
@@ -288,8 +291,11 @@
   <div class="jumbotron main-head top-space visible-xs">
     <div class="container using">
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-6">
         <h2>${_('Everything')}</h2>
+        </div>
+        <div class="col-xs-6">
+        <div class="experts sx">${_('Experts only!')}</div>
         </div>
       </div>
       <div class="row">
@@ -324,8 +330,11 @@
   <div class="jumbotron main-head top-space visible-sm-md hidden-xs hidden-lg">
     <div class="container using">
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-3">
         <h2>${_('Everything')}</h2>
+        </div>
+        <div class="col-xs-9">
+        <div class="experts sx">${_('Experts only!')}</div>
         </div>
       </div>
       <div class="row">
