--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -589,7 +589,7 @@
       </div>
     </div>
   </div>
-
+<!-- News
       <py:choose>
         <py:when test="global_variables.release['curr_state'] == 'Alpha'">
           <div class="newsbox">
@@ -625,6 +625,6 @@
           </div>
         </py:otherwise>
       </py:choose>
-
+-->
 </body>
 </html>
