--- a/getfedora.org/data/content/index.html
+++ b/getfedora.org/data/content/index.html
@@ -215,7 +215,7 @@
   </div>
   </div>
 
-<!-- News -->
+<!-- News
       <py:choose>
         <py:when test="global_variables.release['curr_state'] == 'Alpha'">
           <div class="newsbox">
@@ -251,6 +251,6 @@
           </div>
         </py:otherwise>
       </py:choose>
-
+-->
 </body>
 </html>
