--- a/boot.fedoraproject.org/data/content/index.html
+++ b/boot.fedoraproject.org/data/content/index.html
@@ -10,6 +10,6 @@
     <h2>${_('boot.fedoraproject.org')}</h2>
     <p>${_('boot.fedoraproject.org (BFO) is a way to boot hosts in order to run install or other types of media via the network.  It works similarly to a pxeboot environment.')}</p>
     <p><img alt="${_('BFO welcome screen')}" src="./static/images/bfo-welcome.png" /></p>
-    <p>${_('BFO is based on the work of the BKO - ')} <a href="http://web.archive.org/web/20110903050357/http://boot.kernel.org/">http://boot.kernel.org/</a> ${_('(link to wayback machine for historical reasons.)')} ${_('To download BFO please select BFO Download along the left side menu.')}</p>
+    <p>${_('BFO is based on the work of the BKO - ')} <a href="http://web.archive.org/web/20110903050357/http://boot.kernel.org/">http://boot.kernel.org/</a> ${_('To download BFO please select BFO Download along the left side menu.')}</p>
   </body>
 </html>
