--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -25,7 +25,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-xs-12 text-center">
-                  <h3>${Markup(_('Currently offering &lt;strong&gt;Fedora %(rel)s %(state)s&lt;/strong&gt;.')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</h3>
+                  <h3>${Markup(_('Currently offering &lt;strong&gt;Fedora %(rel)s %(state)s&lt;/strong&gt;.')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}<span class="alt-thin">${_('Released 21 march 2017.')}</span></h3>
                 </div>
               </div>
             </div>
@@ -42,17 +42,6 @@
             </div>
           </div>
         </py:when>
-        <py:otherwise>
-        	<div class="jumbotron newsbox">
-            <div class="container">
-              <div class="row">
-                <div class="col-xs-12 text-center">
-                  <h3>${Markup(_('Currently offering &lt;strong&gt;Fedora %(rel)s %(state)s&lt;/strong&gt;.')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </py:otherwise>
       </py:choose>
 
   <!-- aarch64 -->
