make a panel accordion toggle for alternate arches - still testing

--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -218,6 +218,78 @@
         <p>${_('PPC64 images are for installation on IBM Power systems or OpenPOWER systems.')}</p>
         </div>
         <div class="col-md-9">
+        <div class="panel-group" id="accordion">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                <img src="/static/images/aarch64.png" />
+                ${Markup(_('ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt; aarch64 Architecture'))}
+                </a>
+              </h3>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse">
+              <div class="panel-body">
+                This is just a test
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                <img src="/static/images/ppc.png" />
+                ${Markup(_('PowerPC Architecture (PPC64)'))}
+                </a>
+              </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse">
+              <div class="panel-body">
+                This is just a test
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                <img src="/static/images/ppc.png" />
+                ${Markup(_('PowerPC Architecture (PPC64LE)'))}
+                </a>
+              </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse">
+              <div class="panel-body">
+                This is just a test
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+                <img src="/static/images/s390x.png" />
+                ${Markup(_('s390x Architecture'))}
+                </a>
+              </h4>
+            </div>
+            <div id="collapseFour" class="panel-collapse collapse">
+              <div class="panel-body">
+                This is just a test
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+
+
+
+
+
+
+
+
+        <div class="col-md-9">
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/server.png" />
