--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -204,18 +204,18 @@
   <div class="white-hr"></div>
   <!-- end Network Installers -->
 
-  <!-- Power -->
+  <!-- Alternate Architectures -->
     <!-- Desktop -->
-  <div class="jumbotron main-head hidden-xs hidden-sm">
+  <div class="jumbotron main-head">
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 top-margin">
-        <h2>${_('Power Architecture')}</h2>
+        <h2>${_('Alternate Architectures')}<span class="prerelease-offer">${Markup(_('F%(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</span></h2>
         </div>
       </div>
       <div class="row">
         <div class="col-md-3 product-feature">
-        <p>${_('PPC64 images are for installation on IBM Power systems or OpenPOWER systems.')}</p>
+        <p>${_('These are additional architectures supported by Fedora beyond the standard set')}</p>
         </div>
         <div class="col-md-9">
         <div class="panel-group" id="accordion">
@@ -229,8 +229,42 @@
               </h3>
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
-              <div class="panel-body">
-                This is just a test
+              <div class="panel-body panel-heading">
+                <h3 class="panel-title accordion-title">
+                  <img src="/static/images/server.png" />
+                  ${_('Fedora Server DVD')}
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></span>
+                </h3>
+                <div class="grey-hr"></div>
+                <h3 class="panel-title accordion-title">
+                  <img src="/static/images/server.png" />
+                  ${_('Fedora Server Netinstall')}
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-netinst-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></span>
+                </h3>
+                <div class="grey-hr"></div>
+                <h3 class="panel-title accordion-title">
+                  <img src="/static/images/cloud.png" />
+                  ${_('Fedora Cloud Netinstall')}
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/aarch64/iso/Fedora-Cloud-netinst-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></span>
+                </h3>
+                <div class="grey-hr"></div>
+                <h3 class="panel-title accordion-title">
+                  <img src="/static/images/cloud.png" />
+                  ${_('Fedora Cloud qcow2')}
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/CloudImages/aarch64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></span>
+                </h3>
+                <div class="grey-hr"></div>
+                <h3 class="panel-title accordion-title">
+                  <img src="/static/images/cloud.png" />
+                  ${_('Fedora Cloud raw')}
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/CloudImages/aarch64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></span>
+                </h3>
+                <div class="grey-hr"></div>
+                <h3 class="panel-title accordion-title">
+                  <img src="/static/images/docker.png" />
+                  ${_('Fedora Docker')}
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Docker/aarch64/images/Fedora-Docker-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></span>
+                </h3>
               </div>
             </div>
           </div>
@@ -280,191 +314,6 @@
             </div>
           </div>
         </div>
-        </div>
-
-
-
-
-
-
-
-
-        <div class="col-md-9">
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/server.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Server')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sGB dvd iso')) % global_variables.iso_size['ppc64_Server_DVD']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64/iso/Fedora-Server-dvd-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/server.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Server')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB netinstall iso')) % global_variables.iso_size['ppc64_Server_net']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64/iso/Fedora-Server-netinst-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/cloud.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Cloud')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB netinstall iso')) % global_variables.iso_size['ppc64_Cloud_net']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64/iso/Fedora-Cloud-netinst-ppc64-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/cloud.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Cloud')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB qcow2 image')) % global_variables.iso_size['ppc64_qcow2']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/CloudImages/ppc64/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/cloud.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Cloud')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['ppc64_raw']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/CloudImages/ppc64/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/docker.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Docker')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB Docker image')) % global_variables.iso_size['ppc64_docker']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row top-space">
-        <div class="col-md-3 product-feature">
-        <p>${_('PPC64LE images are for installation on IBM Power systems or OpenPOWER systems.')}</p>
-        </div>
-        <div class="col-md-9">
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/server.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Server')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sGB dvd iso')) % global_variables.iso_size['ppc64le_Server_DVD']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-dvd-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/server.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Server')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB netinstall iso')) % global_variables.iso_size['ppc64le_Server_net']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/cloud.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Cloud')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB netinstall iso')) % global_variables.iso_size['ppc64le_Cloud_net']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/iso/Fedora-Cloud-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/cloud.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Cloud')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB qcow2 image')) % global_variables.iso_size['ppc64le_qcow2']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/CloudImages/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/cloud.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Cloud')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['ppc64le_raw']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/CloudImages/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/docker.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Docker')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB Docker image')) % global_variables.iso_size['ppc64le_docker']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64le/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -760,38 +609,8 @@
     </div>
   </div>
 
-  <!-- Resources -->
-  <div class="jumbotron main-head">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 text-center">
-          <h2>${_('Support Resources')}</h2>
-        </div>
-      </div>
-      <div class="row top-margin">
-        <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center">
-          <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('A wiki page with information about Power Architecture on Fedora is available on the &lt;a href="%s"&gt;Fedora Project Wiki&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Architectures/PowerPC'))}</p>
-        </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center">
-          <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
-          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;ppc@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/ppc'))}</p>
-        </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center">
-          <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-ppc&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-ppc'))}</p>
-        </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="white-hr"></div>
-  <!-- end PowerPC -->
+  <!-- end Alternate Architectures -->
 
   <!-- s390x -->
     <!-- Desktop -->
